--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
   coordinator:
     image: digitalcredentials/workflow-coordinator:0.1.0
@@ -27,7 +28,7 @@ services:
       - REDIS_URL=redis
       - REDIS_PORT=6379
       - MONGODB_URI=mongodb://root:example@mongo:27017/
-      - PAYLOAD_SECRET=aaaaaaaaaaaaaaaaaaaaaaaa
+      - PAYLOAD_SECRET=7e89d859860421cb42a75c8680d599d0416828d71afc9e0d3b62fadccea6b11f
       - TENANT_NAME=lef_test
       - SMTP_HOST=somehost
       - SMTP_USER=somename
@@ -50,7 +51,7 @@ services:
     image: redis:alpine
     container_name: ad-redis
     environment:
-      - ALLOW_EMPTY_PASSWORD=${ALLOW_EMPTY_PASSWORD:-yes}
+     - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - "6379:6379"
   mongo:
