--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,9 @@ services:
       - MONGODB_URI=mongodb://root:example@mongo:27017/
       - PAYLOAD_SECRET=7e89d859860421cb42a75c8680d599d0416828d71afc9e0d3b62fadccea6b11f
       - TENANT_NAME=lef_test
-      - SMTP_HOST=somehost
-      - SMTP_USER=somename
-      - SMTP_PASS=somepass
+      - SMTP_HOST=smtp.gmail.com
+      - SMTP_USER=michellejauge@gmail.com
+      - SMTP_PASS=smpl cfdm ztcp jozw
       - EMAIL_FROM=Digital Credentials Consortium <someone@mit.edu>
       - CLAIM_PAGE_URL=http://localhost:8080
       - PAYLOAD_PUBLIC_SERVER_URL=http://localhost:3000
