--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,26 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
-    "moduleResolution": "nodenext",
-    "module": "nodenext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "strict": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "jsx": "react",
-    "baseUrl": ".",
-    "paths": {
-      "payload/generated-types": [
-        "./src/payload-types.ts"
-      ],
-      "@/*": ["./*"]
+    "compilerOptions": {
+        "target": "esnext",
+        "moduleResolution": "nodenext",
+        "module": "nodenext",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "strict": false,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "jsx": "react",
+        "baseUrl": ".",
+        "paths": {
+            "payload/generated-types": ["./src/payload-types.ts"],
+            "@/*": ["./*"]
+        }
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "dist", "build"],
+    "ts-node": {
+        "transpileOnly": true,
+        "swc": true
     }
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build"
-  ],
-  "ts-node": {
-    "transpileOnly": true,
-    "swc": true
-  }
 }
